# govbros

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/api/routers/: extraction.py  text_to_sql.py
app/crud/: crud.py
app/db/: database.py
app/engine/: index.py  prompts.py
app/models/: db_models.py  models.py
